# temporal-agentic-ad-manager

./: .env.example  .gitignore  Pinterest_Temporal_Agentic_AI.pptx  README.md  SCRIPT.md  pyproject.toml  run_demo.py  starter.py  worker.py
.claude/: launch.json
agent/: __init__.py  activities.py  models.py  workflow.py
pinterest/: __init__.py  config.py  shared.py  simulator.py
pinterest/tools/: __init__.py  analytics.py  campaign_management.py  creative_generation.py  notifications.py  optimization.py
pinterest_ad_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
replay-demo/: REPLAY_COMPARISON.md
replay-demo/restate/: break_it.sh  handler.py  handler_v1.py  handler_v2.py
replay-demo/temporal/: activities.py  break_it.sh  starter.py  worker.py  workflow_v1.py  workflow_v2.py
