[project]
name = "replay-demo"
version = "1.0.0"
description = "Side-by-side comparison of Temporal vs Restate replay behavior under code changes"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.9.0",
    "python-dotenv>=1.0.0",
    "restate-sdk>=0.5.0",
    "hypercorn>=0.17.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
